Fixed Searchbar | Reset Form | Fixed Scrollbar

--- a/src/pages/tk-products-list/tk-products-list.scss
+++ b/src/pages/tk-products-list/tk-products-list.scss
@@ -1,18 +1,28 @@
 page-tk-products-list {
+    ion-header{
+        background: #ffffff !important;
+    }
+    ion-searchbar{
+        .searchbar-input{
+            box-shadow: none !important;
+           //  box-shadow: 0 0 10px rgba(0,0,0,0.1) !important;
+        }
+    }
     ion-content{
         background: aliceblue !important;
-        padding: 0 10px !important;
+        .scroll-content{
+            padding: 0 !important;
+        }
     }
     .tk-product-container{
-     ion-searchbar{
-         margin-top: 20px;
-         .searchbar-input{
-             box-shadow: 0 0 10px rgba(0,0,0,0.1) !important;
-         }
+     padding: 0;
+     virtual-scroller{
+         width: 100%;
      }
      ion-list{
             .tk-item-wrapper{
-                padding: 10px;
+                // padding: 10px;
+                padding: 5px 25px;
                 width: 100%;
             }
             .main-grid{
